<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView

        android:id="@+id/gas_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        tools:text="@string/gas_label"
        tools:textSize="18sp" />


    <EditText
        android:id="@+id/gas_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_gas"

        android:inputType="number|numberDecimal" />


    <TextView
        android:id="@+id/alc_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:text="@string/alc_label" />


    <EditText
        android:id="@+id/alc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_alc"

        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:textColor="@android:color/black"
        android:textSize="24sp" />


</LinearLayout>